tests/snapshots/json_snapshots__build.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "build",
  "data": {
    "child": {
      "code": 0,
      "signal": null
    },
    "log": "<log>",
    "steps": [
      {
        "child": {
          "code": 0,
          "signal": null
        },
        "duration_ms": "<duration_ms>",
        "id": "build",
        "scope": ".",
        "status": "ok"
      }
    ],
    "target": "repo",
    "task": "build"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
