tests/snapshots/json_snapshots__doctor.snap
---
source: tests/json_snapshots.rs
assertion_line: 130
expression: "normalize(value, &h.root)"
---
{
  "command": "doctor",
  "data": {
    "counts": {
      "error": 0,
      "info": 3,
      "warn": 0
    },
    "findings": [
      {
        "code": "NO_ADAPTER",
        "message": "no built-in adapter matched this checkout",
        "remedy": "configure tasks explicitly or add a supported project manifest",
        "severity": "info",
        "subject": "repo"
      },
      {
        "code": "SESSION_BACKEND",
        "message": "session backend is tmux",
        "remedy": "set `session.backend` in `$WT_HOME/config.toml` to change it",
        "severity": "info",
        "subject": "sessions"
      },
      {
        "code": "STATUS_CACHE_OFF",
        "message": "git's untracked cache is off, so each status scans the whole tree",
        "remedy": "run `git config core.untrackedCache true` in this checkout (on macOS or Windows also `git config core.fsmonitor true`)",
        "severity": "info",
        "subject": "repo"
      }
    ]
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
