tests/snapshots/json_snapshots__env.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "env",
  "data": {
    "activation": {
      "applied": {
        "APP_PORT": "20000",
        "PATH": "$ROOT/shims:/usr/bin:/bin:/usr/sbin:/sbin",
        "WT_BIN": "",
        "WT_BRANCH": "main",
        "WT_HOME": "$ROOT/wt-home",
        "WT_LABEL": "repo",
        "WT_NAME": "canonical",
        "WT_NAME_SHORT": "repo_canonical_87657c73",
        "WT_NAME_SNAKE": "canonical",
        "WT_PORT_BASE": "20000",
        "WT_PORT_HTTP": "20000",
        "WT_REPO": "$ROOT/repos/repo",
        "WT_ROOT": "$ROOT/repos/repo",
        "WT_SESSION": "wt_repo_canonical_be9ff5d9",
        "WT_SLOT": "0",
        "WT_TARGET": "repo"
      },
      "home": "$ROOT/wt-home",
      "prior": {
        "APP_PORT": null,
        "PATH": "$ROOT/shims:/usr/bin:/bin:/usr/sbin:/sbin",
        "WT_BIN": null,
        "WT_BRANCH": null,
        "WT_HOME": "$ROOT/wt-home",
        "WT_LABEL": null,
        "WT_NAME": null,
        "WT_NAME_SHORT": null,
        "WT_NAME_SNAKE": null,
        "WT_PORT_BASE": null,
        "WT_PORT_HTTP": null,
        "WT_REPO": null,
        "WT_ROOT": null,
        "WT_SESSION": null,
        "WT_SLOT": null,
        "WT_TARGET": null
      },
      "target": "repo",
      "v": 1
    },
    "bins": [],
    "env": {
      "APP_PORT": "20000",
      "GIT_CONFIG_NOSYSTEM": "1",
      "GIT_TERMINAL_PROMPT": "0",
      "HOME": "$ROOT",
      "LC_ALL": "C",
      "PATH": "$ROOT/shims:/usr/bin:/bin:/usr/sbin:/sbin",
      "WT_ACTIVATION": "{\"applied\":{\"APP_PORT\":\"20000\",\"PATH\":\"$ROOT/shims:/usr/bin:/bin:/usr/sbin:/sbin\",\"WT_BIN\":\"\",\"WT_BRANCH\":\"main\",\"WT_HOME\":\"$ROOT/wt-home\",\"WT_LABEL\":\"repo\",\"WT_NAME\":\"canonical\",\"WT_NAME_SHORT\":\"repo_canonical_87657c73\",\"WT_NAME_SNAKE\":\"canonical\",\"WT_PORT_BASE\":\"20000\",\"WT_PORT_HTTP\":\"20000\",\"WT_REPO\":\"$ROOT/repos/repo\",\"WT_ROOT\":\"$ROOT/repos/repo\",\"WT_SESSION\":\"wt_repo_canonical_be9ff5d9\",\"WT_SLOT\":\"0\",\"WT_TARGET\":\"repo\"},\"home\":\"$ROOT/wt-home\",\"prior\":{\"APP_PORT\":null,\"PATH\":\"$ROOT/shims:/usr/bin:/bin:/usr/sbin:/sbin\",\"WT_BIN\":null,\"WT_BRANCH\":null,\"WT_HOME\":\"$ROOT/wt-home\",\"WT_LABEL\":null,\"WT_NAME\":null,\"WT_NAME_SHORT\":null,\"WT_NAME_SNAKE\":null,\"WT_PORT_BASE\":null,\"WT_PORT_HTTP\":null,\"WT_REPO\":null,\"WT_ROOT\":null,\"WT_SESSION\":null,\"WT_SLOT\":null,\"WT_TARGET\":null},\"target\":\"repo\",\"v\":1}",
      "WT_BIN": "",
      "WT_BRANCH": "main",
      "WT_HOME": "$ROOT/wt-home",
      "WT_LABEL": "repo",
      "WT_NAME": "canonical",
      "WT_NAME_SHORT": "repo_canonical_87657c73",
      "WT_NAME_SNAKE": "canonical",
      "WT_PORT_BASE": "20000",
      "WT_PORT_HTTP": "20000",
      "WT_REPO": "$ROOT/repos/repo",
      "WT_ROOT": "$ROOT/repos/repo",
      "WT_SESSION": "wt_repo_canonical_be9ff5d9",
      "WT_SHIM_STATE": "$ROOT/shim-state",
      "WT_SLOT": "0",
      "WT_TARGET": "repo"
    },
    "kept": [],
    "missing_bins": [],
    "overrode": [],
    "rendered": [
      ".wt/generated"
    ],
    "restored": [],
    "set": [
      "APP_PORT"
    ],
    "target": "repo"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
